// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Comparator Interface Merging > adds new interface even when structurally similar to an existing one if source has both 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,6 +1,8 @@
export interface Container {
+  added: NewSimilar;
+
  existing: Existing;
}

export interface Existing {
  a: number;
@@ -9,5 +11,17 @@

  c: number;

  d: number;
}
+
+export interface NewSimilar {
+  a: number;
+
+  b: number;
+
+  c: number;
+
+  d: number;
+
+  e: number;
+}"
`;

exports[`Comparator Interface Merging > manual merge falls back when source property type mismatches target 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -2,7 +2,8 @@
  items: Item[];
}

export interface Item {
  id: number;
+
  name: string;
}"
`;

exports[`Comparator Interface Merging > manual merge multiple into one with extra property 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -7,9 +7,11 @@

  last_used?: number;

  name: string;

+  name_extra?: string;
+
  name_normalized?: string;

  use_count?: number;
}"
`;

exports[`Comparator Interface Merging > manual merge multiple into one with wrong optional 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -7,9 +7,11 @@

  last_used?: number;

  name: string;

-  name_normalized: string;
+  name_extra?: string;

+  name_normalized?: string;
+
  use_count?: number;
}"
`;

exports[`Comparator Interface Merging > manual merge skips unresolved source interface reference 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,10 +1,11 @@
import { Imported } from 'somewhere';

export interface Container {
-  items: Item[];
+  items: (Item | Imported)[];
}

export interface Item {
  id: number;
+
  name: string;
}"
`;

exports[`Comparator Interface Merging > merge with union 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -2,23 +2,25 @@
  info: Community_data
  extra_info?: (Community_data | Foo)
}

export interface Community_data {
-  avatar_frame: string;
+  animated_avatar?: string;

+  avatar_frame?: string;
+
  avatar_url: string;

-  favorite_badge: Player_badge;
+  favorite_badge?: Player_badge;

  level: number;

  level_class: string;

  persona_name: string;

-  profile_background?: Profile_background2;
+  profile_background?: Profile_background;
}

export interface Foo {
  bar: string;
}"
`;
